@@ -660,8 +660,6 @@
 (define (endprotoent) (setproto))
 (define (endpwent) (setpw))
 (define (endservent) (setserv))
-(define (file-position . args) (apply ftell args))
-(define (file-set-position . args) (apply fseek args))
 (define (getgrent) (getgr))
 (define (gethostent) (gethost))
 (define (getnetent) (getnet))
@@ -669,12 +667,46 @@
 (define (getpwent) (getpw))
 (define (getservent) (getserv))
 (define (reopen-file . args) (apply freopen args))
-(define (setgrent arg) (setgr arg))
-(define (sethostent arg) (sethost arg))
-(define (setnetent arg) (setnet arg))
-(define (setprotoent arg) (setproto arg))
-(define (setpwent arg) (setpw arg))
-(define (setservent arg) (setserv arg))
+(define (setgrent) (setgr #f))
+(define (sethostent) (sethost #t))
+(define (setnetent) (setnet #t))
+(define (setprotoent) (setproto #t))
+(define (setpwent) (setpw #t))
+(define (setservent) (setserv #t))
+
+(define (passwd:name obj) (vector-ref obj 0))
+(define (passwd:passwd obj) (vector-ref obj 1))
+(define (passwd:uid obj) (vector-ref obj 2))
+(define (passwd:gid obj) (vector-ref obj 3))
+(define (passwd:gecos obj) (vector-ref obj 4))
+(define (passwd:dir obj) (vector-ref obj 5))
+(define (passwd:shell obj) (vector-ref obj 6))
+
+(define (group:name obj) (vector-ref obj 0))
+(define (group:passwd obj) (vector-ref obj 1))
+(define (group:gid obj) (vector-ref obj 2))
+(define (group:mem obj) (vector-ref obj 3))
+
+(define (hostent:name obj) (vector-ref obj 0))
+(define (hostent:aliases obj) (vector-ref obj 1))
+(define (hostent:addrtype obj) (vector-ref obj 2))
+(define (hostent:length obj) (vector-ref obj 3))
+(define (hostent:addr-list obj) (vector-ref obj 4))
+
+(define (netent:name obj) (vector-ref obj 0))
+(define (netent:aliases obj) (vector-ref obj 1))
+(define (netent:net obj) (vector-ref obj 2))
+
+(define (protoent:name obj) (vector-ref obj 0))
+(define (protoent:aliases obj) (vector-ref obj 1))
+(define (protoent:proto obj) (vector-ref obj 2))
+
+(define (servent:name obj) (vector-ref obj 0))
+(define (servent:aliases obj) (vector-ref obj 1))
+(define (servent:proto obj) (vector-ref obj 2))
+
+(define (file-position . args) (apply ftell args))
+(define (file-set-position . args) (apply fseek args))
 
 (define (move->fdes port fd)
   (primitive-move->fdes port fd)
